--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Java 1.8
-  apt: name=openjdk-8-jdk state=present
+  apt: update_cache=true name=openjdk-8-jdk state=present
 
 - name: add group "tomcat"
   group: name={{tomcat_group}}
